Fix nav alignment on mobile

--- a/themes/pacgeek/static-sass/style.scss
+++ b/themes/pacgeek/static-sass/style.scss
@@ -84,6 +84,10 @@ nav {
   & + * {
     margin-top: 50px;
   }
+
+  .sub-container {
+    display: flex;
+  }
 }
 
 .brand {
@@ -592,10 +596,6 @@ a.button {
   .menu {
     flex: 1;
     text-align: right;
-  }
-
-  nav .sub-container {
-    display: flex;
   }
 
   .sponsor-logos {
